Surround by double quotes

--- a/2ch.net_tweak.user.css
+++ b/2ch.net_tweak.user.css
@@ -1,5 +1,5 @@
 /* 2ch.net tweak */
-@namespace url(http://www.w3.org/1999/xhtml);
+@namespace url("http://www.w3.org/1999/xhtml");
 
 @-moz-document domain("2ch.net"), domain("bbspink.com") {
   iframe, [class^="banner"], [class*="ad--"], .socialmedia {
