--- a/Advertisement_blocker_for_Slashdot_Japan.user.css
+++ b/Advertisement_blocker_for_Slashdot_Japan.user.css
@@ -1,5 +1,5 @@
 /* Advertisement blocker for Slashdot Japan */
-@namespace url(http://www.w3.org/1999/xhtml);
+@namespace url("http://www.w3.org/1999/xhtml");
 
 @-moz-document domain("srad.jp") {
   .ads-leaderbord,
