--- a/Comfortable_layout_for_Impress_watch.user.css
+++ b/Comfortable_layout_for_Impress_watch.user.css
@@ -1,5 +1,5 @@
 /* Comfortable layout for Impress watch */
-@namespace url(http://www.w3.org/1999/xhtml);
+@namespace url("http://www.w3.org/1999/xhtml");
 
 @-moz-document domain("impress.co.jp") {
   /* Loose page width */
