--- a/Futaba_channel_tweak.user.css
+++ b/Futaba_channel_tweak.user.css
@@ -1,5 +1,5 @@
 /* Futaba channel tweak */
-@namespace url(http://www.w3.org/1999/xhtml);
+@namespace url("http://www.w3.org/1999/xhtml");
 
 @-moz-document domain("2chan.net") {
   /* General */
