--- a/Show_URI_of_article_for_Inoreader.user.css
+++ b/Show_URI_of_article_for_Inoreader.user.css
@@ -1,5 +1,5 @@
 /* Show URI of article for Inoreader */
-@namespace url(http://www.w3.org/1999/xhtml);
+@namespace url("http://www.w3.org/1999/xhtml");
 
 @-moz-document domain("www.inoreader.com") {
   /* Column view */
