--- a/Show_last_modified_timestamp_for_Wikipedia.user.css
+++ b/Show_last_modified_timestamp_for_Wikipedia.user.css
@@ -1,5 +1,5 @@
 /* Show last modified timestamp for Wikipedia */
-@namespace url(http://www.w3.org/1999/xhtml);
+@namespace url("http://www.w3.org/1999/xhtml");
 
 @-moz-document domain("wikipedia.org") {
   #footer-info-lastmod {
