--- a/Bye-bye_MS_Gothic.user.css
+++ b/Bye-bye_MS_Gothic.user.css
@@ -1,5 +1,5 @@
 /* Bye-bye MS Gothic */
-@namespace url(http://www.w3.org/1999/xhtml);
+@namespace url("http://www.w3.org/1999/xhtml");
 
 @font-face {
   font-family: "ＭＳ Ｐゴシック";
