--- a/Cleaner_for_ALC_Eijiro.user.css
+++ b/Cleaner_for_ALC_Eijiro.user.css
@@ -1,5 +1,5 @@
 /* Cleaner for ALC Eijiro */
-@namespace url(http://www.w3.org/1999/xhtml);
+@namespace url("http://www.w3.org/1999/xhtml");
 
 @-moz-document domain("eow.alc.co.jp") {
   #AreaBody > :not(#fixedBox):not(#AreaUpperLeft),
