--- a/Comfortable_layout_for_Kindle_content_manager.user.css
+++ b/Comfortable_layout_for_Kindle_content_manager.user.css
@@ -1,5 +1,5 @@
 /* Comfortable layout for Kindle content manager */
-@namespace url(http://www.w3.org/1999/xhtml);
+@namespace url("http://www.w3.org/1999/xhtml");
 
 @-moz-document url-prefix("https://www.amazon.co.jp/mn/dcw/myx.html") {
   /* Add more height to "List of collection" box in "Add to collection" screen */
