--- a/Comfortable_layout_for_MyJCB.user.css
+++ b/Comfortable_layout_for_MyJCB.user.css
@@ -1,5 +1,5 @@
 /* Comfortable layout for MyJCB */
-@namespace url(http://www.w3.org/1999/xhtml);
+@namespace url("http://www.w3.org/1999/xhtml");
 
 @-moz-document domain("my.jcb.co.jp") {
   .platformY1 {
