--- a/Comfortable_layout_for_Sakura_control_panel.user.css
+++ b/Comfortable_layout_for_Sakura_control_panel.user.css
@@ -1,5 +1,5 @@
 /* Comfortable layout for Sakura control panel */
-@namespace url(http://www.w3.org/1999/xhtml);
+@namespace url("http://www.w3.org/1999/xhtml");
 
 @-moz-document url-prefix("https://secure.sakura.ad.jp/rscontrol/") {
   body > div > table[width] {
