--- a/Comfortable_layout_for_Slideshare.user.css
+++ b/Comfortable_layout_for_Slideshare.user.css
@@ -1,5 +1,5 @@
 /* Comfortable layout for Slideshare */
-@namespace url(http://www.w3.org/1999/xhtml);
+@namespace url("http://www.w3.org/1999/xhtml");
 
 @-moz-document domain("www.slideshare.net") {
   .row {
