--- a/Comfortable_layout_for_Vpass.user.css
+++ b/Comfortable_layout_for_Vpass.user.css
@@ -1,5 +1,5 @@
 /* Comfortable layout for Vpass */
-@namespace url(http://www.w3.org/1999/xhtml);
+@namespace url("http://www.w3.org/1999/xhtml");
 
 @-moz-document url-prefix("https://www.smbc-card.com/mem/") {
   #header, #gNavi, #contWrap {
