--- a/Customize_the_width_of_a_tab.user.css
+++ b/Customize_the_width_of_a_tab.user.css
@@ -1,5 +1,5 @@
 /* Customize the width of a tab */
-@namespace url(http://www.w3.org/1999/xhtml);
+@namespace url("http://www.w3.org/1999/xhtml");
 
 @-moz-document url-prefix("http://") {
   code, pre { tab-size: 4; }
