--- a/Hide_delete_button_from_Amazon_music_library.user.css
+++ b/Hide_delete_button_from_Amazon_music_library.user.css
@@ -1,5 +1,5 @@
 /* Hide delete button from Amazon music library */
-@namespace url(http://www.w3.org/1999/xhtml);
+@namespace url("http://www.w3.org/1999/xhtml");
 
 @-moz-document domain("music.amazon.co.jp") {
   a[href^="#remove/"],            /* Delete */
