--- a/Hide_delete_button_from_Kindle_content_manager.user.css
+++ b/Hide_delete_button_from_Kindle_content_manager.user.css
@@ -1,5 +1,5 @@
 /* Hide delete button from Kindle content manager */
-@namespace url(http://www.w3.org/1999/xhtml);
+@namespace url("http://www.w3.org/1999/xhtml");
 
 @-moz-document url-prefix("https://www.amazon.co.jp/mn/dcw/myx.html") {
   #contentAction_delete_myx {
