--- a/Highlight_a_selected_row_for_Kindle_content_manager.user.css
+++ b/Highlight_a_selected_row_for_Kindle_content_manager.user.css
@@ -1,5 +1,5 @@
 /* Highlight a selected row for Kindle content manager */
-@namespace url(http://www.w3.org/1999/xhtml);
+@namespace url("http://www.w3.org/1999/xhtml");
 
 @-moz-document url-prefix("https://www.amazon.co.jp/mn/dcw/myx.html") {
   .contentTableList_myx .myx-active {
