--- a/Kindle_Cloud_Reader_tweak.user.css
+++ b/Kindle_Cloud_Reader_tweak.user.css
@@ -1,5 +1,5 @@
 /* Kindle Cloud Reader tweak */
-@namespace url(http://www.w3.org/1999/xhtml);
+@namespace url("http://www.w3.org/1999/xhtml");
 
 @-moz-document domain("read.amazon.co.jp") {
   /* Paging arrow */
