--- a/Vpass_tweak.user.css
+++ b/Vpass_tweak.user.css
@@ -1,5 +1,5 @@
 /* Vpass tweak */
-@namespace url(http://www.w3.org/1999/xhtml);
+@namespace url("http://www.w3.org/1999/xhtml");
 
 @-moz-document url-prefix("https://www.smbc-card.com/memx/") {
   /* Kill loading curtain */
