--- a/Google_web_search_tweak.user.css
+++ b/Google_web_search_tweak.user.css
@@ -24,10 +24,11 @@
   .mw .mfr i { font-style: normal !important; }
 
   /* Missing words and/or Recently visited page */
-  .mw ._Tib   { font: bold larger/2 sans-serif !important; }
-  .mw ._Tib s { text-decoration: none !important; }
+  .mw ._Tib,   .mw .TXwUJf   { font: bold larger/2 sans-serif !important; }
+  .mw ._Tib s, .mw .TXwUJf s { text-decoration: none !important; }
 
-  .mw ._Tib s::before {
+  .mw ._Tib s::before,
+  .mw .TXwUJf s::before {
     content: "\2718";
     color: #c00;
   }
