--- a/Comfortable_layout_for_Vpass.user.css
+++ b/Comfortable_layout_for_Vpass.user.css
@@ -6,6 +6,13 @@
     width: 75vw !important;
     max-width: initial !important;
   }
+
+  .leftCont {
+    width: 220px !important;
+  }
+  .rightCont {
+    width: calc(75vw - 250px) !important;
+  }
 }
 
 @-moz-document url-prefix("https://www.smbc-card.com/memx/") {
