--- a/Bye-bye_MS_Mincho.user.css
+++ b/Bye-bye_MS_Mincho.user.css
@@ -3,40 +3,17 @@
 
 @font-face {
   font-family: "ＭＳ Ｐ明朝";
-  src: local("HiraMinProN-W3"), local("MS PMincho");
-}
-@font-face {
-  font-family: "ＭＳ Ｐ明朝";
-  font-weight: bold;
-  src: local("HiraMinProN-W6"), local("MS Mincho");
-}
-
-@font-face {
-  font-family: "MS PMincho";
-  src: local("HiraMinProN-W3"), local("MS PMincho");
+  src: local("ヒラギノ明朝 ProN"), local("MS PMincho");
 }
 @font-face {
   font-family: "MS PMincho";
-  font-weight: bold;
-  src: local("HiraMinProN-W6"), local("MS Mincho");
-}
-
-@font-face {
-  font-family: "ＭＳ 明朝";
-  src: local("HiraMinProN-W3"), local("MS Mincho");
+  src: local("ヒラギノ明朝 ProN"), local("MS PMincho");
 }
 @font-face {
   font-family: "ＭＳ 明朝";
-  font-weight: bold;
-  src: local("HiraMinProN-W6"), local("MS Mincho");
-}
-
-@font-face {
-  font-family: "MS Mincho";
-  src: local("HiraMinProN-W3"), local("MS Mincho");
+  src: local("ヒラギノ明朝 ProN"), local("MS Mincho");
 }
 @font-face {
   font-family: "MS Mincho";
-  font-weight: bold;
-  src: local("HiraMinProN-W6"), local("MS Mincho");
+  src: local("ヒラギノ明朝 ProN"), local("MS Mincho");
 }
