Avoid applying style to image view page of browser

--- a/Futaba_channel_tweak.user.css
+++ b/Futaba_channel_tweak.user.css
@@ -3,7 +3,7 @@
 
 @-moz-document domain("2chan.net") {
   /* General */
-  body {
+  body[bgcolor] {
     margin: 1rem auto !important;
     width: 80% !important;
   }
