Stop header scrolling

--- a/Comfortable_layout_for_Impress_watch.user.css
+++ b/Comfortable_layout_for_Impress_watch.user.css
@@ -11,6 +11,7 @@
     min-width: 980px !important;
   }
   #global-nav > div {
+    position: initial !important;
     width: auto !important;
   }
 
