Remove url-prefixes which no longer used
An URL ends with "/webhp" is no longer used for search result pages.
An URL ends with "/#q=" is now redirected to "/search".

--- a/Google_web_search_tweak.user.css
+++ b/Google_web_search_tweak.user.css
@@ -3,11 +3,7 @@
 
 @-moz-document
   url-prefix("https://www.google.com/search"),
-  url-prefix("https://www.google.com/webhp"),
-  url-prefix("https://www.google.com/#q="),
-  url-prefix("https://www.google.co.jp/search"),
-  url-prefix("https://www.google.co.jp/webhp"),
-  url-prefix("https://www.google.co.jp/#q=")
+  url-prefix("https://www.google.co.jp/search")
 {
   /* Result */
   .mw .s {
