Shipping countdown message is shown in Buybox in some products

--- a/Amazon.co.jp_tweak.user.css
+++ b/Amazon.co.jp_tweak.user.css
@@ -19,13 +19,29 @@
 
   /* 〇〇日にお届けするには今から〇〇時間以内にお急ぎ便 */
   #ddmDeliveryMessage {
-    text-align: left !important;
-    padding: 0.7em 1.2em 1em !important;
     background: #efe !important;
   }
-  #ddmDeliveryMessage b, #ddmFastestCountdown {
-    font: bold 150% sans-serif !important;
+  #ddmDeliveryMessage b,
+  #ddmFastestCountdown {
+    font: bold 100% sans-serif !important;
     white-space: nowrap !important;
+  }
+
+  #buybox #ddmDeliveryMessage {
+    margin: 0 -0.7em !important;
+    padding: 0.7em !important;
+  }
+  #buybox #ddmDeliveryMessage b,
+  #buybox #ddmFastestCountdown {
+    font-size: 125% !important;
+  }
+
+  #centerCol #ddmDeliveryMessage {
+    padding: 0.7em 1.2em 1em !important;
+  }
+  #centerCol #ddmDeliveryMessage b,
+  #centerCol #ddmFastestCountdown {
+    font-size: 150% !important;
   }
 
   /* このKindle版は読者によって問題が報告されています */
