--- a/Cleaner_for_ALC_Eijiro.user.css
+++ b/Cleaner_for_ALC_Eijiro.user.css
@@ -7,7 +7,8 @@
   #AreaUpperLeftInner > :not(#resultsArea):not(#resultsArea_je),
   #searchHeader, #sw, #eijiro_img, .tango, .ex_sentence, .pr_text,
   #itemsNumber .smallredfont,
-  input[type="image"] {
+  input[type="image"],
+  div[id^="div-gpt-ad-"] {
     display: none !important;
   }
 
@@ -99,17 +100,5 @@
   .attr .label::before {
     content: "\A";
     white-space: pre;
-  }
-
-  #resultsList > div[style] {
-    margin-left: 0 !important;
-    font: small/1.4 sans-serif !important;
-  }
-  #resultsArea > p:first-of-type,
-  #resultsArea_je > p:first-of-type {
-    font: small/1 sans-serif !important;
-    margin: 0 !important;
-    clear: both !important;
-    opacity: 0.2 !important;
   }
 }
