--- a/Cleaner_for_ALC_Eijiro.user.css
+++ b/Cleaner_for_ALC_Eijiro.user.css
@@ -5,19 +5,20 @@
   #AreaBody > :not(#fixedBox):not(#AreaUpperLeft),
   #fixedBox > :not(.search_area_left),
   #AreaUpperLeftInner > :not(#resultsArea):not(#resultsArea_je),
-  #searchHeader, #sw, #eijiro_img, .tango, .ex_sentence, .pr_text,
+  #resultsList .aboutword, .aboutword h1,
+  #searchHeader, .tango, .pr_text, .adbox,
   #itemsNumber .smallredfont,
-  input[type="image"],
-  div[id^="div-gpt-ad-"] {
+  div[id^="dac-"] {
     display: none !important;
   }
 
   #AreaBody {
-    margin: 0 4rem !important;
+    margin: 0 !important;
     padding: 0 !important;
   }
   #AreaUpperLeft {
-    margin: 5rem 0 !important;
+    float: initial !important;
+    margin: 5rem 4rem !important;
     padding: 0 !important;
   }
   #AreaUpperLeftContainer {
@@ -30,29 +31,18 @@
     top: 0 !important;
     left: 0 !important;
     margin: 0 !important;
-    padding: 0.8rem 0 !important;
+    padding: 0.8rem 3rem 0 !important;
     width: 100% !important;
     height: auto !important;
     border: none !important;
     background: #fff !important;
   }
-  .search_box {
-    width: 100% !important;
-    margin: 0 0 0 2em !important;
-    padding: 0.2em 0.4em !important;
-  }
   #q {
     font: 22px/1 monospace !important;
-    width: 28em !important;
-    border: 1px solid #aaa !important;
   }
 
   #resultsArea, #resultsArea_je {
     font: 0.9rem/1.7 Arial, sans-serif !important;
-  }
-  .sas {
-    font: 120%/1.4 sans-serif !important;
-    margin: 1em 0 !important;
   }
 
   .midashi, .midashi_je {
@@ -64,37 +54,31 @@
     margin: 0.2em 0 1em !important;
     padding: 0 !important;
   }
-
   a {
     border-bottom: none !important;
   }
 
-  .ul_je + br {
-    display: none !important;
-  }
-
-  .itemPostion {
+  #navigation {
     margin: 0 !important;
   }
   #itemsNumber {
     clear: both !important;
   }
-  #navigation {
-    margin: 0 !important;
-  }
   .navif {
     border-style: none !important;
+  }
+  p {
+    padding: 0 !important;
   }
 
   #paging {
     font-size: 120% !important;
-    margin: 0 0 1rem !important;
-    width: 70% !important;
+    margin: 0 !important;
     float: right !important;
     text-align: right !important;
   }
-  #paging a {
-    padding: 0 !important;
+  #pagetop {
+    margin: 0 !important;
   }
 
   .attr .label::before {
