--- a/Cleaner_for_ALC_Eijiro.user.css
+++ b/Cleaner_for_ALC_Eijiro.user.css
@@ -58,6 +58,10 @@
     border-bottom: none !important;
   }
 
+  .ul_je + br {
+    display: none !important;
+  }
+
   #navigation {
     margin: 0 !important;
   }
