Fix the issue a transparent element prevents from clicking a link

--- a/Cleaner_for_ALC_Eijiro.user.css
+++ b/Cleaner_for_ALC_Eijiro.user.css
@@ -29,6 +29,9 @@
     top: 0 !important;
     left: 8rem !important;
   }
+  #fixedBox {
+    height: initial !important;
+  }
   #q {
     font: 22px/1 monospace !important;
   }
