--- a/Hide_delete_button_from_Kindle_content_manager.user.css
+++ b/Hide_delete_button_from_Kindle_content_manager.user.css
@@ -1,7 +1,7 @@
 /* Hide delete button from Kindle content manager */
 @namespace url("http://www.w3.org/1999/xhtml");
 
-@-moz-document url-prefix("https://www.amazon.co.jp/mn/dcw/myx.html") {
+@-moz-document url-prefix("https://www.amazon.co.jp/hz/mycd/myx") {
   #contentAction_delete_myx {
     display: none !important;
   }
