--- a/Google_web_search_tweak.user.css
+++ b/Google_web_search_tweak.user.css
@@ -16,8 +16,10 @@
   }
 
   /* ChillingEffects */
-  .mw .mfr   { font: x-small/1.4 sans-serif !important; opacity: 0.6 !important; }
-  .mw .mfr i { font-style: normal !important; }
+  #extrares {
+    color: #999 !important;
+    font: x-small/1.4 sans-serif !important;
+  }
 
   /* Missing words and/or Recently visited page */
   .mw ._Tib,   .mw .TXwUJf   { font: bold larger/2 sans-serif !important; }
