--- a/Vpass_tweak.user.css
+++ b/Vpass_tweak.user.css
@@ -14,6 +14,11 @@
 }
 
 @-moz-document url-prefix("https://www.smbc-card.com/memx/web_meisai/") {
+  /* Comfortable layout */
+  .wrapper, .wrap_inner, .container {
+    width: 60vw !important;
+  }
+
   /* Detail table prettify */
   #meisaiTable td {
     line-height: 1 !important;
