Show the notes written at the bottom of form

--- a/Futaba_channel_tweak.user.css
+++ b/Futaba_channel_tweak.user.css
@@ -31,9 +31,7 @@
     background: #ffe !important;
   }
 
-  #reszb,
-  .chui li:not(:nth-of-type(2)),
-  .chui br {
+  #reszb {
     display: none !important;
   }
 
