Adjust the line height

--- a/Futaba_channel_tweak.user.css
+++ b/Futaba_channel_tweak.user.css
@@ -72,8 +72,8 @@
     font: x-large/1.8 sans-serif !important;
   }
 
-  .thre > blockquote + font[color] > b {
-    font: bold x-large/1 sans-serif !important;
+  .thre > font[color] {
+    font: bold x-large/1.2 sans-serif !important;
   }
 
   /* Soudane */
