Hide loan banner

--- a/Vpass_tweak.user.css
+++ b/Vpass_tweak.user.css
@@ -8,7 +8,8 @@
   }
 
   /* Hide revolving payments banner */
-  a[href^="/memx/atrevodiv/"] {
+  a[href^="/memx/atrevodiv/"],
+  a[href^="/mem/loancash/"] {
     opacity: 0.2 !important;
   }
 }
