--- a/Vpass_tweak.user.css
+++ b/Vpass_tweak.user.css
@@ -12,6 +12,11 @@
   a[href^="/mem/loancash/"] {
     opacity: 0.2 !important;
   }
+
+  /* Open header menu immediately */
+  .megaMenu_itemBody, #header_overlay {
+    transition: initial !important;
+  }
 }
 
 @-moz-document url-prefix("https://www.smbc-card.com/memx/web_meisai/") {
