--- a/Amazon.co.jp_tweak.user.css
+++ b/Amazon.co.jp_tweak.user.css
@@ -66,15 +66,10 @@
   /* Opaque elements */
   #kcpApp_feature_div,              /* Kindle無料アプリをダウンロード */
   #SendSample,                      /* 無料サンプルを送信 */
-  #primenote_feature_div,           /* 別の出品者から価格が低い商品が出品されています / Amazonプライムの対象外です */
   #olp_feature_div, .tmm-olp-links, /* 新品の出品 : ○ ￥○○より / \○○ からの ○ 中古 */
   #moreBuyingChoices_feature_div,   /* こちらからもご購入いただけます */
   #sellYoursHere_feature_div,       /* この商品をお持ちですか？ */
-  #usedBuySection, #usedbuyBox, #unqualifiedBuyBox,               /* 中古品（カートに入れるボタン） */
-  #tellAFriendBox_feature_div, #tellAFriendBylineBox_feature_div, /* シェアする */
-
-  .itemUsedAndNew,                                     /* ○○点の新品/中古品 ○○円より @wishlist */
-  .itemNotGiftableMessage, .itemNotGiftablePopoverLink /* 現在この商品はギフトとして購入することができません @wishlist */
+  #tellAFriendBox_feature_div, #tellAFriendBylineBox_feature_div /* シェアする */
   {
     opacity: 0.3 !important;
   }
