--- a/Amazon.co.jp_tweak.user.css
+++ b/Amazon.co.jp_tweak.user.css
@@ -61,11 +61,12 @@
   }
 
   /* Opaque elements */
-  #kcpApp_feature_div,              /* Kindle無料アプリをダウンロード */
-  #SendSample,                      /* 無料サンプルを送信 */
-  #olp_feature_div, .tmm-olp-links, /* 新品の出品 : ○ ￥○○より / \○○ からの ○ 中古 */
-  #moreBuyingChoices_feature_div,   /* こちらからもご購入いただけます */
-  #sellYoursHere_feature_div,       /* この商品をお持ちですか？ */
+  #kcpApp_feature_div,            /* Kindle無料アプリをダウンロード */
+  #SendSample,                    /* 無料サンプルを送信 */
+  #olp_feature_div,               /* 新品の出品 : ○ ￥○○より */
+  .tmm-olp-links,                 /* \○○ からの ○ 中古 @kindlebook */
+  #moreBuyingChoices_feature_div, /* こちらからもご購入いただけます */
+  #sellYoursHere_feature_div,     /* この商品をお持ちですか？ */
   #tellAFriendBox_feature_div, #tellAFriendBylineBox_feature_div /* シェアする */
   {
     opacity: 0.3 !important;
