Search field should be more wider

--- a/Cleaner_for_ALC_Eijiro.user.css
+++ b/Cleaner_for_ALC_Eijiro.user.css
@@ -32,6 +32,9 @@
   #fixedBox {
     height: initial !important;
   }
+  #tabbodyLeft {
+    width: 100% !important;
+  }
   #q {
     font: 22px/1 monospace !important;
   }
