Override background color for all elements descended from ADs
Some elements have #fff as its background color.

--- a/Google_web_search_tweak.user.css
+++ b/Google_web_search_tweak.user.css
@@ -9,6 +9,9 @@
   .mw #tads, .mw #bottomads {
     background: #ffd !important;
   }
+  .mw #tads * {
+    background-color: inherit !important;
+  }
 
   /* ChillingEffects */
   #extrares {
