Legacy URI for Kindle content manager is still working

--- a/Hide_delete_button_from_Kindle_content_manager.user.css
+++ b/Hide_delete_button_from_Kindle_content_manager.user.css
@@ -1,7 +1,10 @@
 /* Hide delete button from Kindle content manager */
 @namespace url("http://www.w3.org/1999/xhtml");
 
-@-moz-document url-prefix("https://www.amazon.co.jp/hz/mycd/myx") {
+@-moz-document
+  url-prefix("https://www.amazon.co.jp/hz/mycd/myx"),
+  url-prefix("https://www.amazon.co.jp/mn/dcw/myx")
+{
   #contentAction_delete_myx {
     display: none !important;
   }
