--- a/Highlight_a_selected_row_for_Kindle_content_manager.user.css
+++ b/Highlight_a_selected_row_for_Kindle_content_manager.user.css
@@ -6,6 +6,6 @@
   url-prefix("https://www.amazon.co.jp/mn/dcw/myx")
 {
   .contentTableList_myx .myx-active {
-    background-color: #fee !important;
+    background-color: #fed !important;
   }
 }
