--- a/Vpass_tweak.user.css
+++ b/Vpass_tweak.user.css
@@ -7,9 +7,8 @@
     display: none !important;
   }
 
-  /* Hide revolving payments banner */
-  a[href^="/memx/atrevodiv/"],
-  a[href^="/mem/loancash/"] {
+  /* Hide banners */
+  #offer_area {
     opacity: 0.2 !important;
   }
 
