Adjust the indent for search box and result

--- a/Cleaner_for_ALC_Eijiro.user.css
+++ b/Cleaner_for_ALC_Eijiro.user.css
@@ -22,6 +22,7 @@
   }
   .wrap, .wrap-inner {
     margin: 0 8rem !important;
+    padding-left: 0 !important;
   }
 
   #resultsArea, #resultsArea_je {
