--- a/Amazon.co.jp_tweak.user.css
+++ b/Amazon.co.jp_tweak.user.css
@@ -38,13 +38,12 @@
   /* Opaque elements */
   #kcpApp_feature_div,            /* Kindle無料アプリをダウンロード */
   #SendSample,                    /* 無料サンプルを送信 */
-  #issuancePriceblockAmabot_feature_div, /* Amazonクラシックカード新規ご入会で○○ポイント */
-  #olp_feature_div,               /* 新品の出品 : ○ ￥○○より */
-  .tmm-olp-links,                 /* \○○ からの ○ 中古 @kindlebook */
+  #issuancePriceblockAmabot_feature_div, /* Amazon Prime Mastercard新規ご入会で x,xxx ポイント */
+  .olp-link-widget,               /* 新品 (x)件の出品 */
+  .tmm-olp-links,                 /* \x,xxx より ○○ 中古品 @kindlebook */
   #moreBuyingChoices_feature_div, /* こちらからもご購入いただけます */
-  #usedBuySection, #usedbuyBox,   /* 中古品 / カートに入れる */
-  #sellYoursHere_feature_div,     /* この商品をお持ちですか？ */
-  #tellAFriendBox_feature_div, #tellAFriendBylineBox_feature_div /* シェアする */
+  #tellAFriendBox_feature_div, #tellAFriendBylineBox_feature_div, /* シェアする */
+  .AdHolder                       /* スポンサー @searchresult */
   {
     opacity: 0.3 !important;
   }
