Apply formatting rules

--- a/Advertisement_blocker_for_Slashdot_Japan.user.css
+++ b/Advertisement_blocker_for_Slashdot_Japan.user.css
@@ -3,7 +3,9 @@
 
 @-moz-document domain("srad.jp") {
   .ads-leaderbord,
-  #ads-article-left, #ads-article-right, #ads-footer-rec {
+  #ads-article-left,
+  #ads-article-right,
+  #ads-footer-rec {
     display: none !important;
   }
 }
