--- a/Vpass_tweak.user.css
+++ b/Vpass_tweak.user.css
@@ -15,8 +15,8 @@
 
 @-moz-document url-prefix("https://www.smbc-card.com/memx/web_meisai/") {
   /* Comfortable layout */
-  .wrapper, .wrap_inner, .container {
-    width: 60vw !important;
+  .container {
+    width: 100% !important;
   }
 
   /* Detail table prettify */
