--- a/Highlight_interlanguage_links_for_Wikipedia.user.css
+++ b/Highlight_interlanguage_links_for_Wikipedia.user.css
@@ -2,6 +2,7 @@
 @namespace url("http://www.w3.org/1999/xhtml");
 
 @-moz-document domain("wikipedia.org") {
+  /* Legacy design */
   #p-lang :is(.interwiki-en, .interwiki-ja) a {
     color: #fff !important;
     font: 1.2rem/1 sans-serif !important;
